# dataCovid19MX

./: .gitignore  Cargo.toml  README.md
src/: download.rs  lib.rs  main.rs  pl_sql.rs  unzip.rs  utils.rs  xlxs_to_pl.rs
tests/: unit_test.rs
