[package]
name = "db_cov19mx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-std = "1.13.0"
calamine = "0.26.1"
color-eyre = "0.6.3"
futures = "0.3.31"
polars = { version = "0.46.0", features = ["lazy"] }
reqwest = "0.12.14"
rusqlite = "0.34.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
zip = "2.2.3"
