[package]
name = "db_cov19mx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-std = "1.13.0"
calamine = "0.26.1"
color-eyre = "0.6.3"
futures = "0.3.31"
polars = { version = "0.46.0", features = ["dtype-decimal", "lazy"] }
reqwest = "0.12.14"
thiserror = "2.0.12"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "any", "sqlite","time"] }
tokio = { version = "1.44.0", features = ["full"] }
zip = "2.2.3"
chrono = "0.4.40"
indexmap = "2.8.0"
